--- a/Estudo_Js/basico_Js/aula_12/index.html
+++ b/Estudo_Js/basico_Js/aula_12/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teste</title>
+    <title>Exercício</title>
 </head>
 <body>
-    <script src="js/script_01.js"></script>
-    
+    <script src="js/script.js">
+    </script>
 </body>
 </html>
