Estudos de Links

--- a/Estudo_HTML/Listas/index.html
+++ b/Estudo_HTML/Listas/index.html
@@ -7,14 +7,16 @@
     <title>Listas</title>
 </head>
 <body>
-    <h1>Lista ordenada</h1>
+    <h1>Estudo de revisão - html.</h1>
+    <h2>Lista ordenada</h2>
     <ol>
         <li>Item 01</li>
         <li>Item 02</li>
         <li>Item 03</li>
         <li>Item 04</li>
     </ol>
-    <h1>Lista não ordenada</h1>
+
+    <h2>Lista não ordenada</h2>
     <ul>
         <li>Item 01</li>
         <li>Item 02</li>
