--- a/Estudo_HTML/Semantico/index.html
+++ b/Estudo_HTML/Semantico/index.html
@@ -10,6 +10,7 @@
     <!-- 3 - header -->
     <header>
         <h2>Nosso site</h2>
+        <!-- 5 - nav -->
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
