--- a/CursoJs/04_assincrono/aula89/index.html
+++ b/CursoJs/04_assincrono/aula89/index.html
@@ -13,6 +13,9 @@
 
   <section class="container">
     <h1>Olá mundo!</h1>
+    <a href="pagina1.html">Página 1</a>
+    <a href="pagina2.html">Página 2</a>
+    <a href="pagina3.html">Página 3</a>
 
     <div class="resultado"></div>
   </section>
