--- a/Estudo_Js/Curso Js/08_Fetch_Await/02_XMLHttpRequest/aula90/index.html
+++ b/Estudo_Js/Curso Js/08_Fetch_Await/02_XMLHttpRequest/aula90/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Estudos</title>
+    <title>API Conselho</title>
 </head>
 <body>
-    <script src="aula89.js"></script>
+
+
+    <!-- Script -->
+    <script src="index.js"></script>
 </body>
 </html>
