Estudo js Resumos para estudos avancados

--- a/Estudo_Js/HoraDeCodar/02_inserindoJs/index.html
+++ b/Estudo_Js/HoraDeCodar/02_inserindoJs/index.html
@@ -4,11 +4,13 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Começando Resumos Javascript</title>
+        <title>Inserindo o JS</title>
+        <script src="head.js"></script>
     </head>
     <body>
         <script>
-            console.log('Script do body')
+            console.log('O js segue a ordem correta em que esta as importações dos arquivos JS')
         </script>
+        <script src="script.js"></script>
     </body>
 </html>
