--- a/Estudo_Js/HoraDeCodar/03_particuridades/index.html
+++ b/Estudo_Js/HoraDeCodar/03_particuridades/index.html
@@ -4,11 +4,10 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Começando Resumos Javascript</title>
+        <title>Particularidades</title>
     </head>
     <body>
-        <script>
-            console.log('Script do body')
-        </script>
+        <!-- Script -->
+        <script src="index.js"></script>
     </body>
 </html>
